# solana-zkvm-verifier

./: .gitignore  Anchor.toml  Cargo.toml
apps/solana-zk-client/: Cargo.toml
apps/solana-zk-client/src/: lib.rs  selector.rs
apps/solana-zk-client/src/verify/: mod.rs  risc0.rs  succinct.rs
programs/solana-zk/: Cargo.toml
programs/solana-zk/src/: errors.rs  instructions.rs  lib.rs  state.rs
tests/: Cargo.toml
tests/src/: lib.rs  test_config.rs  test_solana_zk.rs
tests/src/zkvm/: mod.rs
tests/src/zkvm/risc0/: mod.rs
