[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.31.0"
tokio = { version = "1.39.0", features = ["full"] }
solana-zk = { path = "../programs/solana-zk" }
solana-zk-client = { path = "../apps/solana-zk-client" }
anyhow = "1.0.80"
