[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = { version = "0.31.0" }
tokio = { version = "1.39.0", features = ["full"] }
solana-zk = { path = "../programs/solana-zk" }
solana-zk-client = { path = "../apps/solana-zk-client" }
hex = { version = "0.4.3" }
anyhow = { version = "1.0.80" }