[package]
name = "solana-zk-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.31.0", features = ["async"] }
anyhow = "1.0"
solana-program = "^2.2.1"
thiserror = "1.0"
solana-zk = { path = "../../programs/solana-zk", features = ["no-entrypoint"] }

[features]
default = []
