[package]
name = "solana-zk-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Only include for non-Solana targets
anchor-client = { version = "0.31.0", features = ["async"], optional = true }
anyhow = { version = "1.0", optional = true }
solana-program = { version = "^2.2.1" }

# Include for all targets
solana-zk = { path = "../../programs/solana-zk", features = ["no-entrypoint"] }

[features]
default = ["client"]
client = ["dep:anchor-client", "dep:anyhow"]
